# fpv_sl

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  FPV_SL.drawio  PiPicoPIO.md  README.md  TESTING.md  rebuild.sh
src/: .clang-format  .gitignore  CMakeLists.txt  build.md  clang-format  fpv_sl.c  fpv_sl_loader.c  fpv_sl_smoke_test.c  msc_disk.c  tusb_config.h  usb_descriptor.c
src/.cache/clangd/index/: fpv_sl.c.201D55746FDB5780.idx  fpv_sl.c.F318136FA9E08E41.idx  tusb_config.h.BF13761127F5254E.idx
src/config/: CMakeLists.txt  config.md  default.conf  fpv_sl_config.h
src/drivers/i2s_mic/: CMakeLists.txt  i2s_mic.c  i2s_mic.h  i2s_mic.pio
src/drivers/msp/: CMakeLists.txt  msp_driver.c  msp_driver.h
src/drivers/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h  ws2812.pio
src/modules/: CMakeLists.txt  fpv_sl_core.c  fpv_sl_core.h  fpv_sl_core_board_pin.h
src/modules/audio_buffer/: CMakeLists.txt  audio_buffer.c  audio_buffer.h
src/modules/gpio/: CMakeLists.txt  gpio_interface.c  gpio_interface.h
src/modules/msp/: CMakeLists.txt  msp_interface.c  msp_interface.h
src/modules/sdio/: CMakeLists.txt  CMakelists.txt  file_helper.c  file_helper.h  sd_spi_hw_config.c  sd_spi_hw_config.h
src/modules/status_indicator/: CMakeLists.txt  status_indicator.c  status_indicator.h
src/modules/telemetry/: CMakeLists.txt  tlm_writer.c  tlm_writer.h
src/tests/: CMakeLists.txt
src/tests/host/: test_audio_buffer.c  test_cast_from_str.c  test_config_parser.c  test_disk_usage.c  test_dsp_filter.c  test_recording_mode.c  test_tlm_packing.c
src/tests/stubs/: fatfs_getfree_stub.c  fatfs_getfree_stub.h  ff.h  pico_stubs.c
src/tests/stubs/pico/: critical_section.h  multicore.h  mutex.h  time.h
src/usb/: CMakeLists.txt  cdc_sim.c  cdc_sim.h  msc_disk.c  msc_disk.h  tusb_config.h  usb_descriptor.c
src/usb/cdc/: debug_cdc.c  debug_cdc.h
src/utils/: CMakeLists.txt  cast_from_str.c  cast_from_str.h  cpcpy.txt  debug_log.c  debug_log.h
